Limit Distance Constraint, Affect Transform does not limit the transform system correctly #112580

Closed
opened 2023-09-19 15:25:48 +02:00 by ChicDead26 · 7 comments

As simple as the title makes it seems, really. The problem arises when animating, where you can move a bone to the correct position, keyframe it, and then you notice you have several keyframes where the bone position is the same, simply because the value kept increasing - even tho the position didn't change.

Including a file with an example.

If this is intentional, then i would love to hear why - and how i could avoid it.

As simple as the title makes it seems, really. The problem arises when animating, where you can move a bone to the correct position, keyframe it, and then you notice you have several keyframes where the bone position is the same, simply because the value kept increasing - even tho the position didn't change. Including a file with an example. If this is intentional, then i would love to hear why - and how i could avoid it.
ChicDead26 added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-09-19 15:25:48 +02:00
Member

I was going to say that turning ON Affect Transform should take care of that, but apparently it does not work correctly

image

As a second workaround, I was going to suggest to use visual keyframing

image

That seems to create the keyframes that you want, can you confirm?
(note that you have to change frames after disabling the constraint to see the keyframes are in the correct location)

I was going to say that turning ON Affect Transform should take care of that, but apparently it does not work correctly ![image](/attachments/5cbdd882-dc6b-48bd-bc52-ac3ce79f473f) As a second workaround, I was going to suggest to use visual keyframing ![image](/attachments/224eebc6-3085-45dd-a156-f869952538eb) That seems to create the keyframes that you want, can you confirm? (note that you have to change frames after disabling the constraint to see the keyframes are in the correct location)
Member

Regarding Affect Transform: this seems to work as expected for a Limit Location constraint, however seems kinda broken for the Limit Distance constraint

@mano-wii : interested?

Regarding Affect Transform: this seems to work as expected for a Limit Location constraint, however seems kinda broken for the Limit Distance constraint @mano-wii : interested?
Author

Hi Phillip. I should've mentioned that i've tried pretty much all the options on the constraint itself. Much like you, i thought the Affect Transform toggle should do exactly what i wanted, but it didnt, and i guess i have no idea what it actually should do.

On the other hand, the visual keyframing has worked just fine. Thank you! 😄

Still, i wonder. Are we looking at a bug or at a set of thought-provoking decisions?

Hi Phillip. I should've mentioned that i've tried pretty much all the options on the constraint itself. Much like you, i thought the Affect Transform toggle should do exactly what i wanted, but it didnt, and i guess i have no idea what it actually should do. On the other hand, the visual keyframing has worked just fine. Thank you! 😄 Still, i wonder. Are we looking at a bug or at a set of thought-provoking decisions?
Member

The Affect Transform issue is a bug, will update the report description

The Affect Transform issue is a bug, will update the report description
Philipp Oeser changed title from Limit Distance Constraint limits visually but not in value to Limit Distance Constraint, Affect Transform does not limit the transform system correctly 2023-09-19 16:41:00 +02:00
Philipp Oeser added
Status
Confirmed
Module
Animation & Rigging
Interest
Modeling
and removed
Status
Needs Triage
labels 2023-09-19 16:41:26 +02:00
Member

@angavrilov might also be interested

@angavrilov might also be interested
Christoph Lendenfeld self-assigned this 2023-10-05 16:30:54 +02:00

note to self. the constraint only works if the constrained bones rest pose is at the origin

note to self. the constraint only works if the constrained bones rest pose is at the origin
Germano Cavalcante was assigned by Christoph Lendenfeld 2023-10-06 09:24:20 +02:00
Christoph Lendenfeld removed their assignment 2023-10-06 09:24:25 +02:00

@mano-wii didn't see you had a patch up already. Please assign yourself to the report when you are working on it

@mano-wii didn't see you had a patch up already. Please assign yourself to the report when you are working on it
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-06 17:14:39 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112580
No description provided.